--- a/shop-project/style.css
+++ b/shop-project/style.css
@@ -62,14 +62,35 @@ body {
 .submenu {
     display: none;      
 }
+li:hover >a {
+    background-color: #2c71b8;
+    color: white;
+}
+
 .submenu li:hover {
     background-color:white;
     color: #2c71b8;
 }
+
+.products {
+    position: relative;
+
+}
+.products::after {
+    content: "";
+    position: absolute;
+    top: 35%;
+    right: 10px;
+    width: 15px;
+    height: 15px;
+    background-size: contain;
+    background-image: url("images/arrow_icon.svg");
+    background-repeat: no-repeat;
+}
 .products:hover .submenu{
 display: block;
 position: absolute;
-
+left: -1px;
 }
 .submenu li{
     background-color: #2c71b8;
@@ -78,4 +99,63 @@ position: absolute;
     width: 284px;
     line-height: 40px;
     padding-left: 28px;
+}
+
+.col-3{
+    display: flex;
+    align-items: center;
+}
+.search{
+    width: 75%;
+    height: 40px;
+    border: 1px solid #2c71b8;
+  
+}
+.searchform {
+    display: flex;
+}
+.searchimg{
+    background-color:#2c71b8;
+    width: 30px;
+    height: 30px;
+    margin: 5px;
+}
+.searchimg img {
+   padding: 8px 8.5px;
+}
+.searchinput{
+    background-color: inherit ;
+    height: 40px;
+    border: none;
+    width: 100%;
+}
+::placeholder{
+color: #2c71b8;
+font-size: 21px;
+padding-left: 20px;
+}
+
+.basket {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    margin-left: 30px;
+    position: relative;
+}
+.basket img{
+    padding: 10px;
+    
+}
+.basketitems {
+    background-color: #2c71b8;
+    width: 20px;
+    height: 20px;
+    color: white;
+    text-align: center;
+    font-size: 12px;
+    line-height: 20px;
+    border-radius: 10px;
+    position: absolute;
+    top: -10px;
+    left: -10px;
 }
